# falcon

./: README.md  cli.py  example.py  pyproject.toml  setup.py
envs/: falcon.yml
falcon/: FragmentNetwork.py  Fragmenter.py  Molecule.py  Reaction.py  Resonance.py  utils.py
