[tool.poetry]
name = "falcon"
version = "0.1.0"
description = ""
authors = ["Xin Han (Adam) Yu <adam@magarveylab.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
xxhash = "^2.0.2"
networkx = "^2.6.3"
pandas = "^1.4.1"
rdkit-pypi = "^2021.9.5"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
poetry = "^1.1.13"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
